Modification du css et du html

--- a/portofolio.html
+++ b/portofolio.html
@@ -73,7 +73,7 @@
                         </ul>
                     </div> 
                     <div>
-                        <a href="#" download="Portofolio_BOBO/portofolio.html" >TELECHARGER LE CV </a>
+                        <a href="C:/Users/AISSATOU/Desktop/Portofolio_BOBO" download="mon_portofolio_bobo" >TELECHARGER LE CV </a>
                     </div>
                  </div>      
                    
@@ -151,7 +151,7 @@
 
                   <aside class="display-flex-row">
                     <div class="class_h5"> Etudes et Formation *</div>
-                    <div class="bordure"> Voir les Projets réalisés sur GITHUB</div> 
+                    <div class="bordure"> <a href="https://github.com/AissatouboboDiallo">  Voir les Projets réalisés sur GITHUB </a> </div> 
                   </aside>
 
                   <aside class="display-flex-column ">
